# one-node

./: CMakeLists.txt  README.md  filetransfer.cpp  filetransfer.h  main.cpp  mainwindow.cpp  mainwindow.h  mdnsadvertiser.cpp  mdnsadvertiser.h  onenode.desktop  pairingserver.h
DropIn/: gradle.properties  settings.gradle.kts
DropIn/app/: build.gradle.kts
DropIn/app/src/androidTest/java/com/onenode/dropin/: ExampleInstrumentedTest.kt
DropIn/app/src/main/: AndroidManifest.xml
DropIn/app/src/main/java/com/onenode/dropin/: MainActivity.kt
DropIn/app/src/main/java/com/onenode/dropin/service/: ReceiverService.kt
DropIn/app/src/main/res/layout/: activity_main.xml
DropIn/app/src/main/res/values/: strings.xml  themes.xml
DropIn/app/src/main/res/values-night/: themes.xml
DropIn/app/src/main/res/xml/: file_paths.xml
DropIn/app/src/test/java/com/onenode/dropin/: ExampleUnitTest.kt
DropIn/gradle/: libs.versions.toml
DropIn/gradle/wrapper/: gradle-wrapper.properties
